tests/paczka1/fuzzy1/39589216.err
Error in line 8: 6kMG S262 96,5
Error in line 16: S761 S761 -2,5
Error in line 7: S761 S761 48,9
